--- a/app/templates/vehicles.html
+++ b/app/templates/vehicles.html
@@ -176,6 +176,7 @@
                                                         <th>Engine</th>
                                                         <th>Year</th>
                                                         <th>Lifespan</th>
+                                                        <th>Allocation Status</th>
                                                     </tr>
                                                 </thead>
                                                 <tfoot>
@@ -187,6 +188,7 @@
                                                         <th>Engine</th>
                                                         <th>Year</th>
                                                         <th>Lifespan</th>
+                                                        <th>Allocation Status</th>
                                                     </tr>
                                                 </tfoot>
                                                 <tbody>
@@ -201,6 +203,7 @@
                                                         <td>{{allocation.vehicle.engine_no}}</td>
                                                         <td>{{allocation.vehicle.year}}</td>
                                                         <td>{{allocation.vehicle.lifespan}} Years</td>
+                                                        <td>{{allocation.status}}</td>
                                                     </tr>
                                                     {% endfor %}
                                                     
