--- a/app/templates/mto-sidebar.html
+++ b/app/templates/mto-sidebar.html
@@ -1,11 +1,8 @@
-<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-    <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-    Personnel
-    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+<a class="nav-link" href="/requests">
+    <div class="sb-nav-link-icon"><i class="fas fa-file"></i></div>
+    Requests
 </a>
-<div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
-    <nav class="sb-sidenav-menu-nested nav">
-        <a class="nav-link" href="layout-static.html">Add</a>
-        <a class="nav-link" href="layout-sidenav-light.html">Personnel</a>
-    </nav>
-</div>
+<a class="nav-link" href="/vehicles">
+    <div class="sb-nav-link-icon"><i class="fas fa-car"></i></div>
+    Vehicles
+</a>
