--- a/app/templates/single-unit.html
+++ b/app/templates/single-unit.html
@@ -54,27 +54,27 @@
                                         Information
                                     </div>
                                     <div class="card-body">
-                                    <form method="POST" id="vehicleForm">
+                                    <form method="POST" id="unitForm">
                                         <div class="form-row">
                                             
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="name">Name</label>
-                                                    <input required class="form-control py-2" id="name" name="name" type="text" placeholder="Name" value="{{unit.name}}" />
+                                                    <input required class="form-control py-2" id="unitName" name="name" type="text" placeholder="Name" value="{{unit.name}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="model">Location</label>
-                                                    <input required class="form-control py-2" id="location" name="location" type="text" placeholder="Location" value="{{unit.location}}"/>
+                                                    <input required class="form-control py-2" id="unitLocation" name="location" type="text" placeholder="Location" value="{{unit.location}}"/>
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="type">Command</label>
-                                                    <input required class="form-control py-2" id="command" name="command" type="text" placeholder="Command" value="{{unit.command}}" />
+                                                    <input required class="form-control py-2" id="unitCommand" name="command" type="text" placeholder="Command" value="{{unit.command}}" />
                                                 </div>
                                             </div>
 
