implement statistics and a few allocation changes

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -18,6 +18,7 @@
 <script src="{{url_for('static', filename='js/Chart.min.js')}}" crossorigin="anonymous"></script>
 <script src="{{url_for('static', filename='assets/demo/chart-area-demo.js')}}"></script>
 <script src="{{url_for('static', filename='assets/demo/chart-bar-demo.js')}}"></script>
+<script src="{{url_for('static', filename='assets/demo/chart-pie-demo.js')}}"></script>
 <script src="{{url_for('static', filename='js/jquery.dataTables.min.js')}}" crossorigin="anonymous"></script>
 <script src="{{url_for('static', filename='js/dataTables.bootstrap4.min.js')}}" crossorigin="anonymous"></script>
 <script src="{{url_for('static', filename='assets/demo/datatables-demo.js')}}"></script>
