--- a/app/templates/mto-sidebar.html
+++ b/app/templates/mto-sidebar.html
@@ -1,8 +1,12 @@
 <a class="nav-link" href="/requests">
     <div class="sb-nav-link-icon"><i class="fas fa-file"></i></div>
-    Requests
+    Allocations
 </a>
 <a class="nav-link" href="/vehicles">
     <div class="sb-nav-link-icon"><i class="fas fa-car"></i></div>
     Vehicles
+</a>
+<a class="nav-link" href="/statistics">
+    <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
+    Statistics
 </a>
