--- a/app/templates/admin-sidebar.html
+++ b/app/templates/admin-sidebar.html
@@ -7,3 +7,8 @@
     <div class="sb-nav-link-icon"><i class="fas fa-car"></i></div>
     Vehicles
 </a>
+
+<a class="nav-link" href="/statistics">
+    <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
+    Statistics
+</a>
