--- a/app/templates/admin-vehicles.html
+++ b/app/templates/admin-vehicles.html
@@ -176,6 +176,7 @@
                                                         <th>Engine</th>
                                                         <th>Year</th>
                                                         <th>Lifespan</th>
+                                                        <th>Unit</th>
                                                         <th>Allocation Status</th>
                                                     </tr>
                                                 </thead>
@@ -188,6 +189,7 @@
                                                         <th>Engine</th>
                                                         <th>Year</th>
                                                         <th>Lifespan</th>
+                                                        <th>Unit</th>
                                                         <th>Allocation Status</th>
                                                     </tr>
                                                 </tfoot>
@@ -203,6 +205,7 @@
                                                         <td>{{allocation.vehicle.engine_no}}</td>
                                                         <td>{{allocation.vehicle.year}}</td>
                                                         <td>{{allocation.vehicle.lifespan}} Years</td>
+                                                        <td>{{allocation.unit.name}}</td>
                                                         <td>{{allocation.status}}</td>
                                                     </tr>
                                                     {% endfor %}
