--- a/app/templates/requests.html
+++ b/app/templates/requests.html
@@ -127,10 +127,10 @@
                                                         <td>{{reallocation.vehicle.year}}</td>
                                                         <td>{{reallocation.vehicle.lifespan}} Years</td>
                                                         <td>
-                                                            <a style="color: green;" href="#" class="acceptAllocation" allocationId="{{reallocation.id}}">Accept</a>
+                                                            <a style="color: green;" href="#" class="acceptAllocation" allocationId="{{reallocation.id}}">Release</a>
+                                                            <!-- </br>
                                                             </br>
-                                                            </br>
-                                                            <a style="color: red;" href="#" class="rejectAllocation" allocationId="{{reallocation.id}}">Reject</a>
+                                                            <a style="color: red;" href="#" class="rejectAllocation" allocationId="{{reallocation.id}}">Reject</a> -->
                                                         </td>
                                                     </tr>
                                                     {% endfor %}
