--- a/app/templates/admin-statistics.html
+++ b/app/templates/admin-statistics.html
@@ -71,6 +71,9 @@
                                     </div>
                                     <div class="card-body"><canvas id="statisticsChart" width="100%" height="40"></canvas></div>
                                 </div>
+                            </div>
+                            <div class="col-xl-12">
+                               
                                 <!-- Table Goes Here -->
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <!-- Allocated Vehicles -->
