setup alert and log

--- a/app/templates/single-unit.html
+++ b/app/templates/single-unit.html
@@ -30,6 +30,12 @@
                                             </div>
                                             <div class="col-md-12">
                                                 <div class="form-group">
+                                                    <label class="small mb-1" for="name">Phone</label>
+                                                    <input required class="form-control py-2" id="phone" name="phone" type="text" placeholder="Phone" />
+                                                </div>
+                                            </div>
+                                            <div class="col-md-12">
+                                                <div class="form-group">
                                                     <label class="small mb-1" for="name">Email</label>
                                                     <input required class="form-control py-2" id="email" name="email" type="text" placeholder="Email" />
                                                 </div>
