--- a/app/templates/mto-vehicles.html
+++ b/app/templates/mto-vehicles.html
@@ -10,8 +10,32 @@
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item active"></li>
                         </ol>
-                        <div class="col-md-12">
-                            <div class="card shadow-lg border-0 rounded-lg mt-5">
+                        <div class="row">
+                        <div class="col-xl-4">
+                            <div class="card mb-4">
+                                <div class="card-header">
+                                    <i class="fas fa-chart-area mr-1"></i>
+                                    Upload Bulk Vehicles
+                                </div>
+                                <div class="card-body">
+                                <form method="POST" id="bulkForm">
+                                    <div class="form-row">
+                                        
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label class="small mb-1" for="file">CSV File</label>
+                                                <input required class="form-control py-2" id="file" name="file" type="file" placeholder="CSV File"/>
+                                            </div>
+                                        </div>
+                                        
+                                    </div>
+                                    <div class="form-group mt-4 mb-0"><button class="btn btn-primary btn-block" id="addBulkVehicles" unitId="{{unit.id}}">Upload</button></div>
+                                </form>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-8">
+                            <div class="card mb-4">
                                 <!-- Allocated Vehicles -->
                                 <div class="card mb-4" id="allocated">
                                     <div class="card-header">
@@ -68,6 +92,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                     </div>
                 </main>
 {% include 'footer.html' %}
