--- a/app/templates/mto-vehicles.html
+++ b/app/templates/mto-vehicles.html
@@ -31,7 +31,7 @@
                                     <div class="form-group mt-4 mb-0"><button class="btn btn-primary btn-block" id="addBulkVehicles" unitId="{{unit.id}}">Upload</button></div>
                                 </form>
                                 <div class="card-footer text-center">
-                                    <div class="small"><a href="{{url_for('static', filename='csv_vehicles_example.csv')}}" download>Download Example File</a></div>
+                                    <div class="small"><a href="{{url_for('static', filename='example/csv_vehicles_example.csv')}}" download>Download Example File</a></div>
                                 </div>
                             </div>
                             </div>
